<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Setting model -->
    <string name="faq">Часто задаваемые вопросы</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="feedback">Оставить отзыв</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="parent">Родитель</string>
    <string name="linked_accounts">Присоединенные аккаунты</string>
    <string name="notifications">Уведомления</string>
    <string name="choose_language">Выбрать язык приложения</string>
    <string name="support">Поддержка</string>

    <!-- Fragment profile -->
    <string name="profile_settings">Настройки профиля</string>
    <string name="name">Имя</string>
    <string name="my_family">Моя семья</string>
    <string name="exit">Выйти</string>

    <!-- Fragment edit profile -->
    <string name="my_profile">Мой профиль</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="changes_saved">Изменения сохранены.</string>
    <string name="delete_profile">Удалить профиль</string>
    <string name="connection_error">Ошибка подключения к серверу</string>
    <string name="name_length_error">Имя должно содержать 1 – 20 символов</string>
    <string name="name_not_contains_letter">Имя должно содержать хотя бы одну букву</string>
    <string name="profile_is_deleted">Профиль удален</string>

    <!-- Fragment create account -->
    <string name="password_length_error">Пароль должен содержать хотя бы 8 символов</string>
    <string name="password_format_error">Пароль должен содержать латинские буквы и хотя бы 1 цифру</string>
    <string name="password_confirm_error">Введенные пароли не совпадают</string>

    <!-- Dialog permission settings -->
    <string name="title_no_camera_permission">Приложению “Alfredo” необходим доступ к камере.</string>
    <string name="message_no_camera_permission">Чтобы продолжить, измени настройки доступа.</string>
    <string name="settings">Настройки</string>
    <string name="cancel">Отмена</string>

    <!-- Dialog delete profile -->
    <string name="title_dialog_delete_profile">Ты уверен(а), что хочешь удалить свой профиль?</string>
    <string name="message_dialog_delete_profile">Это действие нельзя отменить</string>
    <string name="delete">Удалить</string>

    <!-- Dialog change profile -->
    <string name="change_photo_profile">Изменить фото профиля</string>
    <string name="choose_method_change_photo">Выбери способ изменения фото.</string>
    <string name="take_selfie">Сделать селфи</string>
    <string name="load_from_gallery">Загрузить из галереи</string>

    <!-- Fragment account status -->
    <string name="role_management">Управление ролями</string>
    <string name="role_management_subtitle">К вашему Family ID должен дыть привязан хотя бы один пользователь с ролью родитель.</string>
    <string name="my_role">Моя роль</string>
    <string name="set_parent">Назначить родителя</string>
    <string name="child">Ребенок</string>

    <!-- Fragment edit profile email -->
    <string name="email_error">Неверный формат email.</string>
    <string name="current_email">Текущий email</string>
    <string name="enter_new_email">Введи новый email</string>
    <string name="help_message_edit_email">Мы отправили ссылку для подтверждения на указанный email.</string>

    <!-- Fragment support -->
    <string name="help_message_support">Остались вопросы? Напишите нам support@email.com</string>
</resources>