<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="14dp"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/partial_appbar_primary" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_demo_bold"
            android:text="@string/my_profile"
            android:textColor="@color/login_title_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/oval_without_borders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_title"/>

        <ImageView
            android:id="@+id/profile_photo_borders"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/oval"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_title"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo"
            app:layout_constraintEnd_toEndOf="@id/profile_photo"
            app:layout_constraintTop_toTopOf="@id/profile_photo" />

        <TextView
            android:id="@+id/person_name_first_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nexa_demo_bold"
            android:text="И"
            android:textColor="@color/dark_text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/profile_photo"
            app:layout_constraintEnd_toEndOf="@id/profile_photo"
            app:layout_constraintStart_toStartOf="@id/profile_photo"
            app:layout_constraintTop_toTopOf="@id/profile_photo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing.double"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_photo" />

        <com.projectx.common.presentation.support.CustomTextInputLayout
            android:id="@+id/person_name_layout"
            style="@style/TextInputEditTextLoginStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="bottom"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_photo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                style="@style/CustomTextInputLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom" />
        </com.projectx.common.presentation.support.CustomTextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_save_changes"
            style="@style/WhiteCustomButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/spacing.large"
            android:padding="@dimen/spacing.normal"
            android:text="@string/save_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/person_name_layout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_vew_save_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/changes_saved"
            android:textColor="@color/background_nav_bar_color"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_save_changes" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_delete_profile"
            style="@style/WhiteCustomButton"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginHorizontal="80dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing.large"
                android:background="@drawable/ic_delete_profile" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="@dimen/spacing.normal"
                android:text="@string/delete_profile"
                android:textColor="@color/background_nav_bar_color"
                android:textSize="@dimen/text_size.small"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>